--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build
-        id: docker_build
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }} # 
+          password: ${{ secrets.DOCKERHUB_TOKEN }} # 
+
+      - name: Build and Push to DockerHub
+        id: docker_build_push
         uses: docker/build-push-action@v2
         with:
-          push: false
+          push: true # 
+          tags: your-dockerhub-username/ci-sum-python:${{ github.sha }} #
