--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true # 
-          tags: your-dockerhub-username/ci:${{ github.sha }} #
+          tags: leonardoJr96/ci:${{ github.sha }} #
